Api definition, add cart endpoints

--- a/simple-store-api.yaml
+++ b/simple-store-api.yaml
@@ -11,16 +11,18 @@ info:
 host: "localhost"
 basePath: "/"
 tags:
-- name: "products"
-  description: "Products"
+- name: "product"
+  description: "Product"
+- name: "cart"
+  description: "Cart"
 schemes:
 - "http"
 paths:
   /products:
     get:
       tags:
-      - "products"
-      summary: "List All Products"
+      - "product"
+      summary: "List all products"
       description: ""
       operationId: "listProducts"
       consumes:
@@ -34,13 +36,49 @@ paths:
             type: "array"
             items:
               $ref: "#/definitions/Product"
+              
+  /carts:
+    post:
+      tags:
+      - "cart"
+      summary: "Create a new cart"
+      produces:
+      - "application/json"
+      responses:
+        200:
+          description: "Cart was created"
+          schema:
+            $ref: "#/definitions/Cart"
+            
+  /carts/{cartId}/products:
+    post:
+      tags:
+      - "cart"
+      summary: "Insert product into cart" 
+      parameters:
+      - in: "path"
+        name: "cartId"
+        type: "string"
+        format: "uuid"
+        required: true
+      - in: "body"
+        name: "body"
+        description: "Product was added to cart"
+        required: true
+        schema:
+          $ref: "#/definitions/Product"
+      responses:
+        204:
+          description: "Product added successfully"
+        404:
+          description: "Cart not found"
+      
 definitions:
   Product:
     type: "object"
     properties:
       id:
         type: "integer"
-        format: "int64"
       thumbnail: #TODO Avaliar mudança pra bytes
         type: "string"
         description: "Thumbnail"
@@ -57,3 +95,12 @@ definitions:
       shortDescription:
         type: "string"
         description: "Short Product Description"
+  Cart:
+    type: "object"
+    properties:
+      id:
+        type: "integer"
+      products:
+        type: "array"
+        items:
+          $ref: "#/definitions/Product"
