Api definition, add orders endpoints, add cartItem definition.

--- a/simple-store-api.yaml
+++ b/simple-store-api.yaml
@@ -72,7 +72,21 @@ paths:
           description: "Product added successfully"
         404:
           description: "Cart not found"
-      
+  /orders:
+    put:
+      tags:
+        - "order"
+      parameters:
+        - in: "body"
+          name: "cart"
+          description: "Shopping cart to be checked out"
+          required: true
+          schema:
+            $ref: "#/definitions/Cart"
+      responses:
+        200:
+          description: "Cart checked out successfully"
+
 definitions:
   Product:
     type: "object"
@@ -103,4 +117,13 @@ definitions:
       products:
         type: "array"
         items:
-          $ref: "#/definitions/Product"
+          $ref: "#/definitions/CartItem"
+  CartItem:
+    type: "object"
+    properties:
+      id:
+        type: "integer"
+      product:
+        $ref: "#/definitions/Product"
+      quantity:
+        type: "integer"
