Api definition, add cart update endpoint.

--- a/simple-store-api.yaml
+++ b/simple-store-api.yaml
@@ -15,6 +15,8 @@ tags:
   description: "Product"
 - name: "cart"
   description: "Cart"
+- name: "order"
+  description: "Order"
 schemes:
 - "http"
 paths:
@@ -36,20 +38,36 @@ paths:
             type: "array"
             items:
               $ref: "#/definitions/Product"
-              
   /carts:
     post:
       tags:
-      - "cart"
+        - "cart"
       summary: "Create a new cart"
       produces:
-      - "application/json"
+        - "application/json"
       responses:
         200:
-          description: "Cart was created"
+          description: "Cart successfully created"
           schema:
             $ref: "#/definitions/Cart"
-            
+    put:
+      tags:
+        - "cart"
+      summary: "Update cart"
+      consumes:
+        - "application/json"
+      parameters:
+        - in: "body"
+          name: "cart"
+          description: "Shopping cart to be updated"
+          required: true
+          schema:
+            $ref: "#/definitions/Cart"
+      responses:
+        204:
+          description: "Cart successfully updated"
+        404:
+          description: "Cart not found"
   /carts/{cartId}/products:
     post:
       tags:
@@ -93,7 +111,7 @@ definitions:
     properties:
       id:
         type: "integer"
-      thumbnail: #TODO Avaliar mudança pra bytes
+      thumbnail: # TODO maybe a byte array?
         type: "string"
         description: "Thumbnail"
       name:
@@ -114,7 +132,7 @@ definitions:
     properties:
       id:
         type: "integer"
-      products:
+      items:
         type: "array"
         items:
           $ref: "#/definitions/CartItem"
